# Kalorie_AI_Projekt

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  requirements.txt
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _chart_generator_8hpp.html  _chart_generator_8hpp.js  _chart_generator_8hpp_source.html  _meal_data_8hpp.html  _meal_data_8hpp.js  _meal_data_8hpp_source.html  _ollama_client_8cpp.html  _ollama_client_8cpp.js  _ollama_client_8cpp_8obj_8d.html  _ollama_client_8hpp.html  _ollama_client_8hpp.js  _ollama_client_8hpp_source.html  _r_e_a_d_m_e_8md.html  _tests_8hpp.html  _tests_8hpp.js  _tests_8hpp_source.html  annotated.html  annotated_dup.js  class_calorie_app-members.html  class_calorie_app.html  class_calorie_app.js  class_chart_generator-members.html  class_chart_generator.html  class_meal_data-members.html  class_meal_data.html  class_meal_data.js  class_ollama_client-members.html  class_ollama_client.html  class_ollama_client.js  class_unit_tests-members.html  class_unit_tests.html  classbasic__json-members.html  classbasic__json.html  classbasic__json.js  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  (+688 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1b.js  all_2.js  all_3.js  (+152 more)
include/: ChartGenerator.hpp  MealData.hpp  OllamaClient.hpp  Tests.hpp
src/: OllamaClient.cpp  main.cpp
tests/: tests.cpp
